--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,17 @@ if (!isLibrary.toBoolean()) {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
         if (!isLibrary.toBoolean()) {
             applicationId "com.moko.bxp.nano"
         }
+        namespace = "com.moko.bxp.nano"
         minSdkVersion 18
         targetSdkVersion 33
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1"
         def formatDate = new Date().format("yyyyMMddHHmm")
         setProperty("archivesBaseName", "NanoBeacon_${versionName}_${formatDate}")
     }
@@ -86,6 +87,8 @@ android {
 }
 
 dependencies {
+    implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.0'
     // Butter Knife
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
