--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moko.bxp.nano">
 
+    <uses-permission android:name="android.permission.NFC" />
+    <!-- 要求当前设备必须要有NFC芯片 -->
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
     <application
         android:name="com.moko.bxp.nano.BaseApplication"
         android:allowBackup="true"
@@ -9,7 +14,8 @@
         android:label="@string/app_name"
         android:theme="@style/LaunchActivityTheme">
 
-        <activity android:name="com.moko.bxp.nano.activity.GuideActivity"
+        <activity
+            android:name="com.moko.bxp.nano.activity.GuideActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,6 +25,7 @@
         </activity>
         <activity
             android:name="com.moko.bxp.nano.activity.NanoMainActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
@@ -26,6 +33,9 @@
             android:name="com.moko.bxp.nano.activity.AboutActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name="com.moko.bxp.nano.activity.ScanActivity"
+            android:screenOrientation="portrait" />
 
 
         <provider
