--- a/mokosupport/build.gradle
+++ b/mokosupport/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 33
+    compileSdk 33
 
     defaultConfig {
+        namespace = "com.moko.support.nano"
         minSdkVersion 18
         targetSdkVersion 33
         versionCode 4
