--- a/mokosupport/build.gradle
+++ b/mokosupport/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         namespace = "com.moko.support.nano"
-        minSdkVersion 18
-        targetSdkVersion 33
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 4
         versionName "4.0"
     }
@@ -20,16 +20,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    lintOptions {
+        abortOnError false
+        disable 'SetTextI18n'
+        checkReleaseBuilds false
+    }
 }
 
 dependencies {
     api files('libs/mokoBleLib.jar')
     api 'no.nordicsemi.android.support.v18:scanner:1.6.0'
-    api 'no.nordicsemi.android:dfu:0.6.2'
     api 'org.greenrobot:eventbus:3.2.0'
     api 'com.elvishew:xlog:1.6.1'
     implementation 'no.nordicsemi.android:ble:2.5.1'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 }
 
 //修改jar名字+将指定jar生成的地方
