--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,12 @@ if (!isLibrary.toBoolean()) {
 }
 
 android {
+    namespace "com.moko.bxp.nano"
     compileSdk 34
 
     defaultConfig {
-        if (!isLibrary.toBoolean()) {
-            applicationId "com.moko.bxp.nano"
-        }
-        namespace = "com.moko.bxp.nano"
-        minSdkVersion 21
-        targetSdkVersion 34
+        minSdk 26
+        targetSdk 34
         versionCode 105
         versionName "1.0.5"
         def formatDate = new Date().format("yyyyMMddHHmm")
@@ -89,7 +86,6 @@ android {
 dependencies {
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.google.zxing:core:3.3.0'
-    // Butter Knife
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -100,10 +96,6 @@ dependencies {
         implementation project(path: ':mokosupport')
     } else {
         implementation files('libs/mokoSupport.jar')
-        compileOnly files('libs/mokoBleLib.jar')
-        implementation 'no.nordicsemi.android.support.v18:scanner:1.6.0'
-        implementation 'org.greenrobot:eventbus:3.3.1'
-        implementation 'com.elvishew:xlog:1.6.1'
-        implementation 'no.nordicsemi.android:ble:2.7.3'
+        compileOnly 'com.github.MOKO-Android-Base-Library:MKBleLib:1.0.0-beacon'
     }
 }
