--- a/mokosupport/build.gradle
+++ b/mokosupport/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
+    namespace "com.moko.support.nano"
     compileSdk 34
 
     defaultConfig {
-        namespace = "com.moko.support.nano"
-        minSdkVersion 21
-        targetSdkVersion 34
+        minSdk 26
+        targetSdk 34
         versionCode 4
         versionName "4.0"
     }
@@ -29,12 +29,7 @@ android {
 }
 
 dependencies {
-    api files('libs/mokoBleLib.jar')
-    api 'no.nordicsemi.android.support.v18:scanner:1.6.0'
-    api 'org.greenrobot:eventbus:3.3.1'
-    api 'com.elvishew:xlog:1.6.1'
-    implementation 'no.nordicsemi.android:ble:2.7.3'
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
+    api 'com.github.MOKO-Android-Base-Library:MKBleLib:1.0.0-beacon'
 }
 
 //修改jar名字+将指定jar生成的地方
