--- a/app/src/main/module/AndroidManifest.xml
+++ b/app/src/main/module/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <!-- 要求当前设备必须要有NFC芯片 -->
     <uses-feature
         android:name="android.hardware.nfc"
-        android:required="true" />
+        android:required="false" />
     <!-- SDCard中创建与删除文件权限 -->
     <uses-permission
         android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
